@@ -1735,6 +1735,7 @@ de.xwic.etlgine/src/de/xwic/etlgine/trigger/ScheduledTrigger.java -text
 de.xwic.etlgine/src/de/xwic/etlgine/trigger/TriggerList.java -text
 de.xwic.etlgine/src/de/xwic/etlgine/util/CryptHelper.java -text
 de.xwic.etlgine/src/de/xwic/etlgine/util/FileUtils.java -text
+de.xwic.etlgine/src/de/xwic/etlgine/util/SourceHelper.java -text
 de.xwic.etlgine/src/de/xwic/etlgine/util/Validate.java -text
 de.xwic.etlgine/src/de/xwic/etlgine/util/XmlUtil.java -text
 de.xwic.etlgine/src_test/de/xwic/etlgine/CubeLoaderTest.java -text
